--- a/models/model_preds.ipynb
+++ b/models/model_preds.ipynb
@@ -65,10 +65,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:AutoGraph could not transform <bound method ResnetBlock.call of <resnet_18.ResnetBlock object at 0x00000259E20E0AC0>> and will run it as-is.\n",
+      "WARNING:tensorflow:AutoGraph could not transform <bound method ResnetBlock.call of <resnet_18.ResnetBlock object at 0x000002873D5C2AC0>> and will run it as-is.\n",
       "Cause: mangled names are not yet supported\n",
       "To silence this warning, decorate the function with @tf.autograph.experimental.do_not_convert\n",
-      "WARNING: AutoGraph could not transform <bound method ResnetBlock.call of <resnet_18.ResnetBlock object at 0x00000259E20E0AC0>> and will run it as-is.\n",
+      "WARNING: AutoGraph could not transform <bound method ResnetBlock.call of <resnet_18.ResnetBlock object at 0x000002873D5C2AC0>> and will run it as-is.\n",
       "Cause: mangled names are not yet supported\n",
       "To silence this warning, decorate the function with @tf.autograph.experimental.do_not_convert\n"
      ]
@@ -134,7 +134,7 @@
     "  pred = classifier.predict(im)\n",
     "  index = np.argmax(pred, axis=1)[0]\n",
     "\n",
-    "  print(image_path.split('/')[-1], ':', labels[index], pred[0][index])"
+    "  print(image_path.split('\\\\')[-1], ':', labels[index], pred[0][index])"
    ]
   },
   {
@@ -163,9 +163,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test_images\\car.jpg : automobile 0.9999509\n",
-      "test_images\\cat.jpg : dog 0.5269787\n",
-      "test_images\\horse.jpg : truck 0.5793473\n"
+      "car.jpg : automobile 0.9999509\n",
+      "cat.jpg : dog 0.5269787\n",
+      "horse.jpg : truck 0.5793473\n"
      ]
     }
    ],
