Retrain ResNet-18 model
Import resnet_18.py

--- a/models/model_preds.ipynb
+++ b/models/model_preds.ipynb
@@ -65,10 +65,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:AutoGraph could not transform <bound method ResnetBlock.call of <resnet_18.ResnetBlock object at 0x000002873D5C2AC0>> and will run it as-is.\n",
+      "WARNING:tensorflow:AutoGraph could not transform <bound method ResnetBlock.call of <resnet_18.ResnetBlock object at 0x0000024E3FEB0B50>> and will run it as-is.\n",
       "Cause: mangled names are not yet supported\n",
       "To silence this warning, decorate the function with @tf.autograph.experimental.do_not_convert\n",
-      "WARNING: AutoGraph could not transform <bound method ResnetBlock.call of <resnet_18.ResnetBlock object at 0x000002873D5C2AC0>> and will run it as-is.\n",
+      "WARNING: AutoGraph could not transform <bound method ResnetBlock.call of <resnet_18.ResnetBlock object at 0x0000024E3FEB0B50>> and will run it as-is.\n",
       "Cause: mangled names are not yet supported\n",
       "To silence this warning, decorate the function with @tf.autograph.experimental.do_not_convert\n"
      ]
@@ -163,9 +163,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "car.jpg : automobile 0.9999509\n",
-      "cat.jpg : dog 0.5269787\n",
-      "horse.jpg : truck 0.5793473\n"
+      "car.jpg : automobile 1.0\n",
+      "cat.jpg : dog 0.9996878\n",
+      "horse.jpg : dog 0.46701697\n"
      ]
     }
    ],
