Update unet_predicts.ipynb and create evaluage_fg_pixels.ipynb
- Call model.predict() to get the predicted mask for input image.
- Evaluate model results based on foreground pixels.

--- a/models/unet_predicts.ipynb
+++ b/models/unet_predicts.ipynb
@@ -76,7 +76,7 @@
     "  input_image = input_image[None,:,:]\n",
     "\n",
     "  # get predicted mask\n",
-    "  pred_mask = tf.argmax(input_image, axis=-1)\n",
+    "  pred_mask = tf.argmax(model.predict(input_image), axis=-1)\n",
     "  pred_mask = pred_mask[..., tf.newaxis]\n",
     "\n",
     "  # resize image back to original size\n",
