--- a/demo.ipynb
+++ b/demo.ipynb
@@ -83,7 +83,7 @@
     "                                       in_place_merge=True, merge_func=merge_mean_color, \n",
     "                                       weight_func=_weight_mean_color)\n",
     "    \n",
-    "    return labels"
+    "    return labels2"
    ]
   },
   {
@@ -236,7 +236,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1a065138c4fc4b798d29926857ec6279",
+       "model_id": "989213a4dff04ed4af01d81f73db5acc",
        "version_major": 2,
        "version_minor": 0
       },
