--- a/demo.ipynb
+++ b/demo.ipynb
@@ -89,6 +89,24 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "logical-amendment",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy import ndimage as ndi\n",
+    "from skimage import morphology\n",
+    "from skimage.feature import canny\n",
+    "\n",
+    "def edge_segment(image):\n",
+    "    edges = canny(image, sigma=2)\n",
+    "    filled = ndi.binary_fill_holes(edges)\n",
+    "    filled_cleaned = morphology.remove_small_objects(filled, 21)\n",
+    "    return filled_cleaned"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "intense-denver",
    "metadata": {},
    "outputs": [],
@@ -115,7 +133,7 @@
     "    # get predicted mask for input image\n",
     "    temp.append(create_mask(image))\n",
     "    \n",
-    "    # image processing for Otsu & Edge-based methods\n",
+    "    # image processing for Otsu\n",
     "    image_otsu = cv2.imread(str(img), cv2.IMREAD_COLOR)\n",
     "    image_otsu = cv2.cvtColor(image_otsu, cv2.COLOR_BGR2GRAY)\n",
     "    scale_percent = 50\n",
@@ -126,7 +144,7 @@
     "    image_otsu = cv2.resize(image_otsu, dim)\n",
     "    \n",
     "    # edge-based method\n",
-    "    temp.append(cv2.Canny(image_otsu,100,200))\n",
+    "    temp.append(edge_segment(cv2.imread(str(img), 0)))\n",
     "    \n",
     "    # Otsu method\n",
     "    otsu_threshold, otsout = cv2.threshold(image_otsu, 0, 255, \n",
@@ -148,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "floral-dylan",
    "metadata": {},
    "outputs": [],
@@ -187,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "british-virginia",
    "metadata": {},
    "outputs": [],
@@ -203,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "scientific-middle",
    "metadata": {},
    "outputs": [],
@@ -229,14 +247,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "advanced-medline",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "989213a4dff04ed4af01d81f73db5acc",
+       "model_id": "970c787f722c43beb2340ac7702e9db7",
        "version_major": 2,
        "version_minor": 0
       },
